Projects/ASL/Codes/consistencyChecker/consChecker_ISI_V1/parser/eeYacc.output
Terminals unused in grammar

   ERROR
   '?'
   UMINUS


State 50 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program VarDeclStmt
    2        | VarDeclStmt
    3        | program asStmt
    4        | asStmt

    5 $@1: %empty

    6 VarDeclStmt: KWD $@1 idlist ';'

    7 asStmt: STMT expr ';'

    8 expr: expr '+' expr
    9     | expr '-' expr
   10     | expr '*' expr
   11     | expr '/' expr
   12     | expr AND expr
   13     | expr OR expr
   14     | expr LE expr
   15     | expr '<' expr
   16     | expr GE expr
   17     | expr '>' expr
   18     | expr '=' expr
   19     | expr EQ expr
   20     | expr NE expr
   21     | NOT expr
   22     | '(' expr ')'
   23     | BOOLVALUE
   24     | NUMBER
   25     | ID

   26 idlist: idlist ',' idlist
   27       | ID


Terminals, with rules where they appear

$end (0) 0
'(' (40) 22
')' (41) 22
'*' (42) 10
'+' (43) 8
',' (44) 26
'-' (45) 9
'/' (47) 11
';' (59) 6 7
'<' (60) 15
'=' (61) 18
'>' (62) 17
'?' (63)
error (256)
ID (258) 25 27
KWD (259) 6
STMT (260) 7
NUMBER (261) 24
BOOLVALUE (262) 23
ERROR (263)
AND (264) 12
OR (265) 13
LE (266) 14
GE (267) 16
NOT (268) 21
EQ (269) 19
NE (270) 20
UMINUS (271)


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
program (30)
    on left: 1 2 3 4, on right: 0 1 3
VarDeclStmt (31)
    on left: 6, on right: 1 2
$@1 (32)
    on left: 5, on right: 6
asStmt (33)
    on left: 7, on right: 3 4
expr (34)
    on left: 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25, on right:
    7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
idlist (35)
    on left: 26 27, on right: 6 26


State 0

    0 $accept: . program $end

    KWD   shift, and go to state 1
    STMT  shift, and go to state 2

    program      go to state 3
    VarDeclStmt  go to state 4
    asStmt       go to state 5


State 1

    6 VarDeclStmt: KWD . $@1 idlist ';'

    $default  reduce using rule 5 ($@1)

    $@1  go to state 6


State 2

    7 asStmt: STMT . expr ';'

    ID         shift, and go to state 7
    NUMBER     shift, and go to state 8
    BOOLVALUE  shift, and go to state 9
    NOT        shift, and go to state 10
    '('        shift, and go to state 11

    expr  go to state 12


State 3

    0 $accept: program . $end
    1 program: program . VarDeclStmt
    3        | program . asStmt

    $end  shift, and go to state 13
    KWD   shift, and go to state 1
    STMT  shift, and go to state 2

    VarDeclStmt  go to state 14
    asStmt       go to state 15


State 4

    2 program: VarDeclStmt .

    $default  reduce using rule 2 (program)


State 5

    4 program: asStmt .

    $default  reduce using rule 4 (program)


State 6

    6 VarDeclStmt: KWD $@1 . idlist ';'

    ID  shift, and go to state 16

    idlist  go to state 17


State 7

   25 expr: ID .

    $default  reduce using rule 25 (expr)


State 8

   24 expr: NUMBER .

    $default  reduce using rule 24 (expr)


State 9

   23 expr: BOOLVALUE .

    $default  reduce using rule 23 (expr)


State 10

   21 expr: NOT . expr

    ID         shift, and go to state 7
    NUMBER     shift, and go to state 8
    BOOLVALUE  shift, and go to state 9
    NOT        shift, and go to state 10
    '('        shift, and go to state 11

    expr  go to state 18


State 11

   22 expr: '(' . expr ')'

    ID         shift, and go to state 7
    NUMBER     shift, and go to state 8
    BOOLVALUE  shift, and go to state 9
    NOT        shift, and go to state 10
    '('        shift, and go to state 11

    expr  go to state 19


State 12

    7 asStmt: STMT expr . ';'
    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . AND expr
   13     | expr . OR expr
   14     | expr . LE expr
   15     | expr . '<' expr
   16     | expr . GE expr
   17     | expr . '>' expr
   18     | expr . '=' expr
   19     | expr . EQ expr
   20     | expr . NE expr

    AND  shift, and go to state 20
    OR   shift, and go to state 21
    LE   shift, and go to state 22
    GE   shift, and go to state 23
    '<'  shift, and go to state 24
    '>'  shift, and go to state 25
    '='  shift, and go to state 26
    EQ   shift, and go to state 27
    NE   shift, and go to state 28
    '-'  shift, and go to state 29
    '+'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    ';'  shift, and go to state 33


State 13

    0 $accept: program $end .

    $default  accept


State 14

    1 program: program VarDeclStmt .

    $default  reduce using rule 1 (program)


State 15

    3 program: program asStmt .

    $default  reduce using rule 3 (program)


State 16

   27 idlist: ID .

    $default  reduce using rule 27 (idlist)


State 17

    6 VarDeclStmt: KWD $@1 idlist . ';'
   26 idlist: idlist . ',' idlist

    ';'  shift, and go to state 34
    ','  shift, and go to state 35


State 18

    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . AND expr
   13     | expr . OR expr
   14     | expr . LE expr
   15     | expr . '<' expr
   16     | expr . GE expr
   17     | expr . '>' expr
   18     | expr . '=' expr
   19     | expr . EQ expr
   20     | expr . NE expr
   21     | NOT expr .

    EQ   shift, and go to state 27
    NE   shift, and go to state 28
    '-'  shift, and go to state 29
    '+'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32

    $default  reduce using rule 21 (expr)


State 19

    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . AND expr
   13     | expr . OR expr
   14     | expr . LE expr
   15     | expr . '<' expr
   16     | expr . GE expr
   17     | expr . '>' expr
   18     | expr . '=' expr
   19     | expr . EQ expr
   20     | expr . NE expr
   22     | '(' expr . ')'

    AND  shift, and go to state 20
    OR   shift, and go to state 21
    LE   shift, and go to state 22
    GE   shift, and go to state 23
    '<'  shift, and go to state 24
    '>'  shift, and go to state 25
    '='  shift, and go to state 26
    EQ   shift, and go to state 27
    NE   shift, and go to state 28
    '-'  shift, and go to state 29
    '+'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    ')'  shift, and go to state 36


State 20

   12 expr: expr AND . expr

    ID         shift, and go to state 7
    NUMBER     shift, and go to state 8
    BOOLVALUE  shift, and go to state 9
    NOT        shift, and go to state 10
    '('        shift, and go to state 11

    expr  go to state 37


State 21

   13 expr: expr OR . expr

    ID         shift, and go to state 7
    NUMBER     shift, and go to state 8
    BOOLVALUE  shift, and go to state 9
    NOT        shift, and go to state 10
    '('        shift, and go to state 11

    expr  go to state 38


State 22

   14 expr: expr LE . expr

    ID         shift, and go to state 7
    NUMBER     shift, and go to state 8
    BOOLVALUE  shift, and go to state 9
    NOT        shift, and go to state 10
    '('        shift, and go to state 11

    expr  go to state 39


State 23

   16 expr: expr GE . expr

    ID         shift, and go to state 7
    NUMBER     shift, and go to state 8
    BOOLVALUE  shift, and go to state 9
    NOT        shift, and go to state 10
    '('        shift, and go to state 11

    expr  go to state 40


State 24

   15 expr: expr '<' . expr

    ID         shift, and go to state 7
    NUMBER     shift, and go to state 8
    BOOLVALUE  shift, and go to state 9
    NOT        shift, and go to state 10
    '('        shift, and go to state 11

    expr  go to state 41


State 25

   17 expr: expr '>' . expr

    ID         shift, and go to state 7
    NUMBER     shift, and go to state 8
    BOOLVALUE  shift, and go to state 9
    NOT        shift, and go to state 10
    '('        shift, and go to state 11

    expr  go to state 42


State 26

   18 expr: expr '=' . expr

    ID         shift, and go to state 7
    NUMBER     shift, and go to state 8
    BOOLVALUE  shift, and go to state 9
    NOT        shift, and go to state 10
    '('        shift, and go to state 11

    expr  go to state 43


State 27

   19 expr: expr EQ . expr

    ID         shift, and go to state 7
    NUMBER     shift, and go to state 8
    BOOLVALUE  shift, and go to state 9
    NOT        shift, and go to state 10
    '('        shift, and go to state 11

    expr  go to state 44


State 28

   20 expr: expr NE . expr

    ID         shift, and go to state 7
    NUMBER     shift, and go to state 8
    BOOLVALUE  shift, and go to state 9
    NOT        shift, and go to state 10
    '('        shift, and go to state 11

    expr  go to state 45


State 29

    9 expr: expr '-' . expr

    ID         shift, and go to state 7
    NUMBER     shift, and go to state 8
    BOOLVALUE  shift, and go to state 9
    NOT        shift, and go to state 10
    '('        shift, and go to state 11

    expr  go to state 46


State 30

    8 expr: expr '+' . expr

    ID         shift, and go to state 7
    NUMBER     shift, and go to state 8
    BOOLVALUE  shift, and go to state 9
    NOT        shift, and go to state 10
    '('        shift, and go to state 11

    expr  go to state 47


State 31

   10 expr: expr '*' . expr

    ID         shift, and go to state 7
    NUMBER     shift, and go to state 8
    BOOLVALUE  shift, and go to state 9
    NOT        shift, and go to state 10
    '('        shift, and go to state 11

    expr  go to state 48


State 32

   11 expr: expr '/' . expr

    ID         shift, and go to state 7
    NUMBER     shift, and go to state 8
    BOOLVALUE  shift, and go to state 9
    NOT        shift, and go to state 10
    '('        shift, and go to state 11

    expr  go to state 49


State 33

    7 asStmt: STMT expr ';' .

    $default  reduce using rule 7 (asStmt)


State 34

    6 VarDeclStmt: KWD $@1 idlist ';' .

    $default  reduce using rule 6 (VarDeclStmt)


State 35

   26 idlist: idlist ',' . idlist

    ID  shift, and go to state 16

    idlist  go to state 50


State 36

   22 expr: '(' expr ')' .

    $default  reduce using rule 22 (expr)


State 37

    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . AND expr
   12     | expr AND expr .
   13     | expr . OR expr
   14     | expr . LE expr
   15     | expr . '<' expr
   16     | expr . GE expr
   17     | expr . '>' expr
   18     | expr . '=' expr
   19     | expr . EQ expr
   20     | expr . NE expr

    EQ   shift, and go to state 27
    NE   shift, and go to state 28
    '-'  shift, and go to state 29
    '+'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32

    $default  reduce using rule 12 (expr)


State 38

    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . AND expr
   13     | expr . OR expr
   13     | expr OR expr .
   14     | expr . LE expr
   15     | expr . '<' expr
   16     | expr . GE expr
   17     | expr . '>' expr
   18     | expr . '=' expr
   19     | expr . EQ expr
   20     | expr . NE expr

    EQ   shift, and go to state 27
    NE   shift, and go to state 28
    '-'  shift, and go to state 29
    '+'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32

    $default  reduce using rule 13 (expr)


State 39

    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . AND expr
   13     | expr . OR expr
   14     | expr . LE expr
   14     | expr LE expr .
   15     | expr . '<' expr
   16     | expr . GE expr
   17     | expr . '>' expr
   18     | expr . '=' expr
   19     | expr . EQ expr
   20     | expr . NE expr

    EQ   shift, and go to state 27
    NE   shift, and go to state 28
    '-'  shift, and go to state 29
    '+'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32

    $default  reduce using rule 14 (expr)


State 40

    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . AND expr
   13     | expr . OR expr
   14     | expr . LE expr
   15     | expr . '<' expr
   16     | expr . GE expr
   16     | expr GE expr .
   17     | expr . '>' expr
   18     | expr . '=' expr
   19     | expr . EQ expr
   20     | expr . NE expr

    EQ   shift, and go to state 27
    NE   shift, and go to state 28
    '-'  shift, and go to state 29
    '+'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32

    $default  reduce using rule 16 (expr)


State 41

    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . AND expr
   13     | expr . OR expr
   14     | expr . LE expr
   15     | expr . '<' expr
   15     | expr '<' expr .
   16     | expr . GE expr
   17     | expr . '>' expr
   18     | expr . '=' expr
   19     | expr . EQ expr
   20     | expr . NE expr

    EQ   shift, and go to state 27
    NE   shift, and go to state 28
    '-'  shift, and go to state 29
    '+'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32

    $default  reduce using rule 15 (expr)


State 42

    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . AND expr
   13     | expr . OR expr
   14     | expr . LE expr
   15     | expr . '<' expr
   16     | expr . GE expr
   17     | expr . '>' expr
   17     | expr '>' expr .
   18     | expr . '=' expr
   19     | expr . EQ expr
   20     | expr . NE expr

    EQ   shift, and go to state 27
    NE   shift, and go to state 28
    '-'  shift, and go to state 29
    '+'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32

    $default  reduce using rule 17 (expr)


State 43

    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . AND expr
   13     | expr . OR expr
   14     | expr . LE expr
   15     | expr . '<' expr
   16     | expr . GE expr
   17     | expr . '>' expr
   18     | expr . '=' expr
   18     | expr '=' expr .
   19     | expr . EQ expr
   20     | expr . NE expr

    EQ   shift, and go to state 27
    NE   shift, and go to state 28
    '-'  shift, and go to state 29
    '+'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32

    $default  reduce using rule 18 (expr)


State 44

    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . AND expr
   13     | expr . OR expr
   14     | expr . LE expr
   15     | expr . '<' expr
   16     | expr . GE expr
   17     | expr . '>' expr
   18     | expr . '=' expr
   19     | expr . EQ expr
   19     | expr EQ expr .
   20     | expr . NE expr

    '*'  shift, and go to state 31
    '/'  shift, and go to state 32

    $default  reduce using rule 19 (expr)


State 45

    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . AND expr
   13     | expr . OR expr
   14     | expr . LE expr
   15     | expr . '<' expr
   16     | expr . GE expr
   17     | expr . '>' expr
   18     | expr . '=' expr
   19     | expr . EQ expr
   20     | expr . NE expr
   20     | expr NE expr .

    '*'  shift, and go to state 31
    '/'  shift, and go to state 32

    $default  reduce using rule 20 (expr)


State 46

    8 expr: expr . '+' expr
    9     | expr . '-' expr
    9     | expr '-' expr .
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . AND expr
   13     | expr . OR expr
   14     | expr . LE expr
   15     | expr . '<' expr
   16     | expr . GE expr
   17     | expr . '>' expr
   18     | expr . '=' expr
   19     | expr . EQ expr
   20     | expr . NE expr

    '*'  shift, and go to state 31
    '/'  shift, and go to state 32

    $default  reduce using rule 9 (expr)


State 47

    8 expr: expr . '+' expr
    8     | expr '+' expr .
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   12     | expr . AND expr
   13     | expr . OR expr
   14     | expr . LE expr
   15     | expr . '<' expr
   16     | expr . GE expr
   17     | expr . '>' expr
   18     | expr . '=' expr
   19     | expr . EQ expr
   20     | expr . NE expr

    '*'  shift, and go to state 31
    '/'  shift, and go to state 32

    $default  reduce using rule 8 (expr)


State 48

    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   10     | expr '*' expr .
   11     | expr . '/' expr
   12     | expr . AND expr
   13     | expr . OR expr
   14     | expr . LE expr
   15     | expr . '<' expr
   16     | expr . GE expr
   17     | expr . '>' expr
   18     | expr . '=' expr
   19     | expr . EQ expr
   20     | expr . NE expr

    $default  reduce using rule 10 (expr)


State 49

    8 expr: expr . '+' expr
    9     | expr . '-' expr
   10     | expr . '*' expr
   11     | expr . '/' expr
   11     | expr '/' expr .
   12     | expr . AND expr
   13     | expr . OR expr
   14     | expr . LE expr
   15     | expr . '<' expr
   16     | expr . GE expr
   17     | expr . '>' expr
   18     | expr . '=' expr
   19     | expr . EQ expr
   20     | expr . NE expr

    $default  reduce using rule 11 (expr)


State 50

   26 idlist: idlist . ',' idlist
   26       | idlist ',' idlist .

    ','  shift, and go to state 35

    ','       [reduce using rule 26 (idlist)]
    $default  reduce using rule 26 (idlist)
